# cli

./: .env.example  .gitignore  Cargo.toml  README.md  build_wasm.sh  rust-toolchain  wasm_build.sh
.github/workflows/: rust.yml
src/: args.rs  cli.rs  client.rs  constants.rs  conversion.rs  env.rs  error.rs  exploit_circuit.rs  inputs_builder.rs  lib.rs  main.rs  real_prover.rs  types.rs  utils.rs  verification.rs  wasm.rs
src/anvil/: client.rs  conversion.rs  mod.rs
src/state_root/: account.rs  account_trie.rs  key.rs  mod.rs  nibbles.rs  node.rs  state_trie.rs  storage_trie.rs  trie.rs
src/state_root/utils/: mod.rs  nibbles.rs  trie.rs
src/utils/: etherscan.rs  geth.rs  halo2.rs  helpers.rs  huff.rs  ipfs.rs  mod.rs  real_prover.rs  scaffold.rs  solidity.rs
src/utils/anvil/: client.rs  conversion.rs  mod.rs
src/utils/halo2/: helpers.rs  mod.rs  proof.rs  real_prover.rs  real_verifier.rs  srs.rs
src/witness/: inputs_builder.rs  mod.rs
