[package]
name = "zk-proof-of-evm-exploit"
version = "0.1.0"
edition = "2021"

[dependencies]
# anvil
anvil = { git = "https://github.com/foundry-rs/foundry.git", package = "anvil",  features = [ "default" ], rev = "dea5405" }
anvil-core = { git = "https://github.com/foundry-rs/foundry.git", package = "anvil-core",  features = [ "default" ], rev = "dea5405" }
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws"] }
partial-mpt = { git = "https://github.com/zemse/partial-mpt", branch = "main" }

# zkevm
bus-mapping = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits", branch = "main", features = [ "test" ] }
eth-types = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits", branch = "main" }
zkevm-circuits = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits", branch = "main" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
# snark-verifier-sdk = { git = "https://github.com/privacy-scaling-explorations/snark-verifier.git", rev = "a440ff91" } 
snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier.git", rev = "a440ff91" } 
ethers-core = "2.0.7"
itertools = "0.10"
rand_chacha = "0.3"

# misc
tokio = { version = "1.13", features = ["macros"] }
futures = { version = "0.3.*" }
dotenv = "0.15.0"
bytes = "1.1.0"
clap = { version = "4.0", features = ["derive"] }
serde = "1.0.188"
serde_json = "1.0.107"
regex = "1.9.5"
reqwest = { version = "0.11" }
pinata-sdk = "1.1.0"

# [patch."https://github.com/privacy-scaling-explorations/zkevm-circuits"]
# bus-mapping = { git = "https://github.com/zemse/zkevm-circuits", branch = "proof-of-exploit", features = [ "test" ] }
# eth-types = { git = "https://github.com/zemse/zkevm-circuits", branch = "proof-of-exploit" }
# zkevm-circuits = { git = "https://github.com/zemse/zkevm-circuits", branch = "proof-of-exploit" }

# for local development only
[patch."https://github.com/privacy-scaling-explorations/zkevm-circuits"]
bus-mapping = { path = "../zkevm-circuits/bus-mapping" }
eth-types = { path = "../zkevm-circuits/eth-types" }
zkevm-circuits = { path = "../zkevm-circuits/zkevm-circuits" }
