[package]
name = "proof-of-exploit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "exploit"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# anvil
anvil = { git = "https://github.com/foundry-rs/foundry.git", package = "anvil", rev = "dea5405", optional = true }
anvil-core = { git = "https://github.com/foundry-rs/foundry.git", package = "anvil-core", rev = "dea5405", optional = true }
ethers = { git = "https://github.com/gakonst/ethers-rs", optional = true }
partial-mpt = { git = "https://github.com/zemse/partial-mpt", branch = "main", optional = true }

# zkevm
bus-mapping = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits", branch = "main", default-features = false, optional = true }
eth-types = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits", branch = "main", optional = true }
zkevm-circuits = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits", branch = "main", default-features = false, optional = true }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier.git", rev = "a440ff91", optional = true }
ethers-core = { version = "2.0.7", optional = true }
itertools = { version = "0.10", optional = true }
rand_chacha = { version = "0.3", optional = true }

# misc
tokio = { version = "1.13", features = ["macros"], optional = true }
futures = { version = "0.3.*", optional = true }
dotenv = { version = "0.15.0", optional = true }
bytes = { version = "1.1.0", optional = true }
clap = { version = "4.0", features = ["derive", "cargo"], optional = true }
serde = { version = "1.0.188", optional = true }
serde_json = { version = "1.0.107", optional = true }
regex = { version = "1.9.5", optional = true }
reqwest = { version = "0.11", optional = true }
pinata-sdk = { version = "1.1.0", optional = true }
svm-rs = { version = "0.3.3", optional = true }
semver = { version = "1.0", features = ["serde"], optional = true }
home = { version = "0.5.5", optional = true }

# wasm
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"], optional = true }
rayon = { version = "1.5", optional = true }
wasm-bindgen-rayon = { version = "1.0", optional = true }
web-sys = { version = "0.3", features = ["Request", "Window", "Response"], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"], optional = true }

[patch."https://github.com/privacy-scaling-explorations/zkevm-circuits"]
bus-mapping = { git = "https://github.com/zemse/zkevm-circuits", rev = "16507249", default-features = false, optional = true }
eth-types = { git = "https://github.com/zemse/zkevm-circuits", rev = "16507249", optional = true }
zkevm-circuits = { git = "https://github.com/zemse/zkevm-circuits", rev = "16507249", default-features = false, optional = true }

# for local development only
# [patch."https://github.com/privacy-scaling-explorations/zkevm-circuits"]
# bus-mapping = { path = "../zkevm-circuits/bus-mapping", default-features = false, optional = true }
# eth-types = { path = "../zkevm-circuits/eth-types", optional = true }
# zkevm-circuits = { path = "../zkevm-circuits/zkevm-circuits", default-features = false }

[features]
default = ["nowasm"]
nowasm = [
    "bus-mapping/nowasm",
    "zkevm-circuits/nowasm",
    "anvil",
    "anvil-core",
    "ethers",
    "partial-mpt",
    "eth-types",
    "snark-verifier",
    "ethers-core",
    "itertools",
    "rand_chacha",
    "tokio",
    "futures",
    "dotenv",
    "clap",
    "serde",
    "serde_json",
    "regex",
    "reqwest",
    "pinata-sdk",
    "svm-rs",
    "semver",
    "home",
]
wasm = [
    "zkevm-circuits/wasm",
    "bus-mapping/wasm",
    "getrandom",
    "wasm-bindgen",
    "console_error_panic_hook",
    "rayon",
    "wasm-bindgen-rayon",
    "web-sys",
    "wasm-bindgen-futures",
    "js-sys",
]
